[package]
name = "librevault-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
prost = "0.11.6"
#tonic-reflection = "0.3.0"
rabin = {path= "../rabin"}
rand = "0.8.5"
librevault_util = { path = "../util" }
tracing = "0.1"
sha3 = "0.10.6"
aes-gcm-siv = "0.11.1"
multihash = "0.18.0"
hex = "0.4.3"
walkdir = "2"
path-slash = "0.2.1"
unicode-normalization = "0.1.19"

ed25519-dalek-fiat = "0.1.0"
luhn-rs = "0.0.1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
bs58 = "0.4.0"
ed25519 = "1.2.0"

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.6"

[dev-dependencies]
tempfile = "3.2.0"
