[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
rocksdb = "0.20.1"
multihash = "0.18.1"
hex = "0.4.3"
rabin = { path = "../rabin" }
serde = "1.0.152"
librevault-core = { path = "../librevault-core" }
prost = "0.11.6"
clap = { version = "4.2.4", features = ["derive"] }
#serde_json = "1.0.93"
tracing = "0.1.37"
tracing-subscriber = "0.3"
thiserror = "1.0.38"
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "debug-print" ] }
actix = "0.13.0"
actix-rt = "2.8.0"
migration = { path = "../migration" }
async-trait = "0.1.66"
tokio = { version = "1.26.0", features = ["fs"] }
slab = "0.4.8"
notify = "5.1.0"
bytes = "1.4.0"
libp2p-identity = { version = "0.1.1", features = ["peerid", "ed25519"] }
directories = "5.0"
libp2p = { version = "0.51.0", features = ["tcp", "tokio", "gossipsub", "yamux", "noise", "mdns", "kad", "identify", "request-response", "macros", "tls"], default-features = false }
flume = "0.10.14"
ractor = "0.8.0"
