[package]
name = "librevault_util"
version = "1.0.0-alpha.1"
authors = ["Alexander Shishenko <alex@shishenko.com>"]
edition = "2021"

[dependencies]
rand = "0.8.4"
log = "0.4.14"
simple_logger = "1.16.0"
hex = "0.4.3"
luhn-rs = "0.0.1"
bs58 = "0.4.0"
base32 = "0.4.0"
lazy_static = "1.4.0"
path-slash = "0.1.4"
unicode-normalization = "0.1.19"
prost = "0.9.0"
cxx = "1.0"
serde_json = "1.0.88"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
# Crypto
openssl = "0.10.38"
block-modes = "0.8.1"
aes = "0.7.5"
sha3 = "0.10.0"
ed25519-dalek-fiat = "0.1.0"
ed25519 = "1.2.0"
signature = "1.5.0"
# Database
libsqlite3-sys = { version = "0.23.2", features = ["bundled"] }
rusqlite = "0.26.3"
tokio = {version = "1.13.0", features = ["fs", "io-util"] }

num-traits = "0.2.14"
num-derive = "0.3.3"

rabin = {path= "../rabin"}

[build-dependencies]
built = "0.5"
prost-build = "0.9.0"
cxx-build = "1.0"

[dev-dependencies]
tempfile = "3.2.0"

[lib]
crate-type=["staticlib", "lib"]
