[package]
name = "librevault_util"
version = "1.0.0-alpha.1"
authors = ["Alexander Shishenko <alex@shishenko.com>"]
edition = "2021"

[dependencies]
rand = "0.8.4"
log = "0.4.14"
hex = "0.4.3"
base32 = "0.4.0"
path-slash = "0.1.4"
unicode-normalization = "0.1.19"

tokio = {version = "1.13.0", features = ["fs", "io-util"] }

[dev-dependencies]
tempfile = "3.2.0"

[lib]
crate-type=["staticlib", "lib"]
